--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
   <html>
     <head>
       <link rel="stylesheet" type="text/css" href="styles.css">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css.map">
       <title>Router</title>
     </head>
     <body>
